OO-7180: add create passkey or send authentication link